--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@ body {
     font-weight: normal;
     text-transform: uppercase;
   }
+
+  .btn{
+    
+        margin: 0;
+        position: absolute;
+        top: 90%;
+        left: 47%;
+        
+      
+  }
   
   .box {
     width: 180px;
@@ -19,13 +29,20 @@ body {
         color: black;
         text-align: center;
         line-height: 1.1;
-	    padding: 20px 0;
+	    padding-top:5%;
     } 
     
+    h4 {
+        color: black;
+        text-align: center;
+        line-height: 1.1;
+	    padding-top:2%;
+    } 
     h3 {
         color: black;
         text-align: center;
         line-height: 1.1;
+      
 	    
     }
 
@@ -68,7 +85,7 @@ body {
 
   .pt{
 
-    padding-top: 60%;
+    padding-top: 55%;
 
   }
 
